# bench-ballmapper

./: .gitignore  .tool-versions  README.md  pyproject.toml
benchmarks/: benchmark_runner.py  bm_validate.py  gen_synthetic.py  gpu_ball_mapper.py  html_report.py
benchmarks/wrappers/: wrapper_fastballmapper.py  wrapper_gpu.py  wrapper_pyballmapper.py  wrapper_pyballmapper_balltree.py
scripts/: build-pyballmapper-balltree.sh
