[project]
name = "bench-ballmapper"
version = "0.1.0"
description = "Benchmark comparing pyBallMapper vs fast-ballmapper"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "networkx",
    "scikit-learn",
    "pyballmapper",
    "pyballmapper-balltree",
    "fast-ballmapper[faiss]>=0.1.0",
    "tqdm>=4.69.0",
]

[tool.uv.sources]
pyBallMapper = { git = "https://github.com/jooyounghahn/pyBallMapper.git", branch = "add-gpu-wavemis-benchmark" }
pyBallMapper-balltree = { path = "./tmp/balltree-pkg" }
fast-ballmapper = { git = "https://github.com/jhnrckmnznrs/fast-ballmapper" }

[tool.uv.workspace]
members = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[dependency-groups]
dev = [
    "torch>=2.13.0",
]
