[project]
name = "bench-ballmapper"
version = "0.1.0"
description = "Benchmark comparing pyBallMapper vs fast-ballmapper"
requires-python = ">=3.10,<3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "networkx",
    "scikit-learn",
    "pyballmapper",
    "pyballmapper-balltree",
    "fast-ballmapper[faiss]>=0.1.0",
    "tqdm",
]

[tool.uv.sources]
pyBallMapper = { git = "https://github.com/jooyounghahn/pyBallMapper.git", branch = "add-gpu-wavemis-benchmark" }
pyBallMapper-balltree = { path = "./tmp/balltree-pkg" }
fast-ballmapper = { git = "https://github.com/jhnrckmnznrs/fast-ballmapper" }
torch = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }
torchaudio = { index = "pytorch-cu117" }

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[tool.uv.workspace]
members = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[dependency-groups]
dev = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
]